added content to experience section. added hyperlinks.

--- a/index.html
+++ b/index.html
@@ -72,10 +72,21 @@
             <li>Effective team management and leadership skills</li>
             <li>Excellent communication and organization skills</li>
             <li>Attention to detail</li>
-            <li>Experienced in repairing Mac and iPhone hardware</li>
             <li>Mentorship</li>
+            <li>Leadership</li>
+            <li>Customer Service</li>
+            <li>Management</li>
+            <li>Human interaction and human factors</li>
+            <li>Behavioral Psychology</li>
+            <li>Tests and measurements</li>
+            <li>Reinforcment Training</li>
+            <li>Autism Spectrum Disorder</li>
             <li>Front End Developer</li>
+            <li>UX Design</li>
+            <li>Mac and iPhone Hardware Repair</li>
             <li>ACMT and ACiT certified</li>
+            <li>Computer hardware repair</li>
+            <li>Performance Arts</li>
             <li>Music Theory</li>
             <br>
             <li style="text-decoration: underline;"><h2>Proficient in:</h2></li></ul>                
@@ -93,7 +104,8 @@
     <div class="content-section" id="experience" data-aos="fade-up">
         <h2>Experience</h2>
         <div class="experience-card">
-            <img src="assets/images/apple_logo.jpeg" alt="Apple logo">
+            <a href="https://www.apple.com" target="_blank">
+            <img src="assets/images/apple_logo.jpeg" alt="Apple logo"></a>
             <h3>Apple</h3>
             <p>Genius</p>
             <p>April 2018 - July 2024</p>
@@ -101,7 +113,7 @@
                 <button class="accordion-button">View Duties</button>
                 <div class="accordion-content">
                     <ul>
-                        <ul>Exceptional technical customer support for Apple products</ul>
+                        <ul>Exceptional general and technical customer support for Apple products</ul>
                         <ul>Hardware repairs and replacements</ul>
                         <ul>Software-related assistance, including setup, configuration, and updates</ul>
                         <ul>Accurate and confidential record-keeping to track trends and improve processes</ul>
@@ -123,7 +135,8 @@
 <!-- Starbucks work -->
     <div class="content-section" id="experience" data-aos="fade-up">
         <div class="experience-card">
-            <img src="assets/images/starbucks_logo.jpeg" alt="Apple logo">
+            <a href="https://www.starbucks.com" target="_blank">
+            <img src="assets/images/starbucks_logo.jpeg" alt="Apple logo"></a>
             <h3>Starbucks</h3>
             <p>Manager</p>
             <p>March 2007 - 2018</p>
@@ -144,7 +157,8 @@
   <!-- Shape of Behavior work -->
   <div class="content-section" id="experience" data-aos="fade-up">
     <div class="experience-card">
-        <img src="assets/images/the_shape_of_behavior_logo.jpeg" alt="Apple logo">
+        <a href="https://www.bluesprigautism.com/blog/blue-sprig-autism-acquires-the-shape-of-behavior/" target="_blank"> 
+        <img src="assets/images/the_shape_of_behavior_logo.jpeg" alt="Apple logo"></a>
         <h3>The Shape of Behavior</h3>
         <p>Behavior Therapist</p>
         <p>April 2017 - April 2018</p>
@@ -174,13 +188,14 @@
     <div class="content-section" id="education" data-aos="fade-up">
         <h2>Education</h2>
         <a href="https://www.utrgv.edu" target="_blank">
-        <img src="assets/images/utpa_logo.jpeg" alt="UTPA Logo">
+        <img src="assets/images/utpa_logo.jpeg" alt="UTPA Logo"></a>
         <p>University of Texas Pan American-<br>
             Bachelor of Arts in Psychology<br>
+            Minor in English<br>
                        August 2014</p>
         <br>                
         <a href="https://whs.wisd.us" target="_blank"> 
-        <img src="assets/images/whs_logo.jpeg" alt="Weslaco High School Logo">
+        <img src="assets/images/whs_logo.jpeg" alt="Weslaco High School Logo"></a>
         <p>Weslaco High School<br>
             August 2001 - May 2005</p>
         </a>    
