added skill to skills section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <li>Tests and measurements</li>
             <li>Reinforcment Training</li>
             <li>Autism Spectrum Disorder</li>
+            <li>AI/ML technologies</li>
             <li>Front End Developer</li>
             <li>UX Design</li>
             <li>Mac and iPhone Hardware Repair</li>
