added more skills to skills section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
             <li>Effective team management and leadership skills</li>
             <li>Excellent communication and organization skills</li>
             <li>Attention to detail</li>
+            <li>Problem Solving</li>
+            <li>Deductive/Inductive Reasoning</li>
             <li>Mentorship</li>
             <li>Leadership</li>
             <li>Customer Service</li>
@@ -86,7 +88,7 @@
             <li>UX Design</li>
             <li>Mac and iPhone Hardware Repair</li>
             <li>ACMT and ACiT certified</li>
-            <li>Computer hardware repair</li>
+            <li>Troublshooting all Apple Devices</li>
             <li>Performance Arts</li>
             <li>Music Theory</li>
             <br>
