added to about me and skills section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <br>
             I am a results-driven professional with a Bachelor’s Degree in Psychology from The University of Texas-Pan American,<br>
             complemented by a diverse background spanning technology, computer hardware repair, retail, music, and clinical research.<br> 
-            My skill set includes but is not limited to the proficiency in Python, macOS, iOS, SaaS, Android OS, and industry-standard<br> 
+            My skill set includes but is not limited to the proficiency in Front and Backend development, macOS, iOS, SaaS, Android OS, and industry-standard<br> 
             tools such as Visual Studio Code, Xcode, and Logic Pro.
             <br>
             <br>
@@ -84,7 +84,9 @@
             <li>Reinforcment Training</li>
             <li>Autism Spectrum Disorder</li>
             <li>AI/ML technologies</li>
-            <li>Front End Developer</li>
+            <li>Agile Learning</li>
+            <li>Front-End Developer</li>
+            <li>Back-End Development</li>
             <li>UX Design</li>
             <li>Mac and iPhone Hardware Repair</li>
             <li>ACMT and ACiT certified</li>
