added social media icons to landing page/hero section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             <a href="#projects" class="cta-button">Projects</a>
             <a href="#photos" class="cta-button">Photos</a>
         </div>
+        <div class="social-icons">
+            <a href="https://github.com/oneironaught" target="_blank" class="fa fa-github"></a>
+            <a href="https://www.linkedin.com/in/rruelas87/" target="_blank" class="fa fa-linkedin"></a>
+            <a href="https://www.facebook.com/bobby.ruelas/" target="_blank" class="fa fa-facebook"></a>
+            <a href="https://www.instagram.com/andvenus/" target="_blank" class="fa fa-instagram"></a>
+          </div>
     </section>
 
     <!--About me section-->
