change to skills

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <br>
             <li style="text-decoration: underline;"><h2>Proficient in:</h2></li></ul>                
                 <li>HTML, CSS, Javascript</li>
-                <li>Python and SwiftUI</li>
+                <li>SwiftUI</li>
                 <li>SaSS</li>
                 <li>macOS and Microsoft</li>
                 <li>iOS and Android OS</li>
