made changes to index. added social links. added information to the about me section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script>
 </head>
 
-<body>
+<div>
     <!-- Dark Mode Toggle Button -->
     <button id="dark-mode-toggle" class="dark-mode-toggle">Toggle Dark Mode</button>
 
@@ -51,23 +51,18 @@
     <!--About me section-->
     <div class="content-section" id="about" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>My name is Robert Ruelas. I am a billingual Technical Consultant and Software Developer that can help troubleshoot
-            your hardware or elevate your next project. <br> 
+        <p>My name is Robert Ruelas. I am a billingual a results-driven professional with a Bachelor’s Degree in Psychology from The University of Texas-Pan American<br> 
+            that can help troubleshoot your hardware or elevate your next project. <br> 
             I'm also the co-founder and creative director of And Venus, 
             a musical project that provides insight into the psychology of music.<br>
-            Some of my hobbies are taking long walks with my dogs, reading books, and playing music. 
+            Some of my hobbies are taking long walks with my dogs, reading books, and playing music.
+            I am passionate about driving results and fostering growth in team environments.<br> 
             <br>
             <br>
-            I am a results-driven professional with a Bachelor’s Degree in Psychology from The University of Texas-Pan American,<br>
-            complemented by a diverse background spanning technology, computer hardware repair, retail, music, and clinical research.<br> 
-            My skill set includes but is not limited to the proficiency in Front and Backend development, macOS, iOS, SaaS, Android OS, and industry-standard<br> 
-            tools such as Visual Studio Code, Xcode, and Logic Pro.
-            <br>
-            <br>
-            As a Certified Mac Technician, I provide expert technical support across all Apple products.<br>
-            My experience extends from quantitative and qualitative data analysis, applied behavior analysis,<br> 
-            to management, interpersonal communication, and mentorship.<br> 
-            I am passionate about driving results and fostering growth in team environments.<br>
+            As a Certified Mac Technician, I provide expert technical support across all Apple products<br>
+            complemented by a diverse background spanning quantitative and qualitative data analysis, applied behavior analysis,<br> 
+            technology, computer hardware repair, software development, management, interpersonal communication, and mentorship.<br> 
+            <a href="mailto:bobbyruelas@me.com" style="color: rgb(24, 68, 157);">Contact me</a> today to learn more about how I can help you achieve your goals.
         </p>
     </div>
 
@@ -108,7 +103,15 @@
                 <li>iOS and Android OS</li>
                 <li>Debugging macOS and iOS</li>
                 <li>SPSS and R</li>
+            <br>    
+    <h3>
+        Visit my 
+        <a href="https://github.com/oneironaught" target="_blank" style="text-decoration: none; color: inherit;">
+            Github <i class="fa fa-github" aria-hidden="true"></i></fa>
+        </a>
+    </h3>        
     </div>
+
 
 <!-- Experience section -->
 <!--Apple work--> 
@@ -172,14 +175,20 @@
         <img src="assets/images/the_shape_of_behavior_logo.jpeg" alt="Apple logo"></a>
         <h3>The Shape of Behavior</h3>
         <p>Behavior Therapist</p>
-        <p>April 2017 - April 2018</p>
+        <p>April 2016 - April 2018</p>
         <div class="accordion-item">
             <button class="accordion-button">View Duties</button>
             <div class="accordion-content">
                 <ul>
                     <ul>Applied Behavioral Analysis (ABA) and Analytical Problem Solving</ul>
-                    <ul>Day Treatments, Preference Assessment, Parent Training, Social Skills</ul>
-                    <ul>Shadowing & Inclusion, EEG Biofeedback, Speech Therapy, Autism Therapy</ul>
+                    <ul>Day Treatments</ul>
+                    <ul>Preference Assessment</ul>
+                    <ul>Parent Training</ul>
+                    <ul>Social Skills</ul>
+                    <ul>Shadowing & Inclusion</ul>
+                    <ul>EEG Biofeedback</ul>
+                    <ul>Speech & Occupational Therapy</ul> 
+                    <ul>Autism Therapy</ul>
                     <ul>Data Collection Implementation (Catalyst Program)</ul>
                 </ul>
             </div>
@@ -189,10 +198,14 @@
 <!--More experience-->
     <div class="content-section" id="experience" data-aos="fade-up">
         <div class="experience-card">
-            <a href="https://www.linkedin.com/in/rruelas87/" target="_blank">
-            <h3>More experience on Linkedin</h3></a>
+            <h3>
+                More experience on 
+                <a href="https://www.linkedin.com/in/rruelas87/" target="_blank" style="text-decoration: none; color: rgb(53, 53, 239);">
+                    LinkedIn <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </a>
+            </h3>
+            </div>
         </div>
-    </div>            
 
 
     <!-- Education section -->
@@ -224,10 +237,39 @@
             </div>
         </div>
         <div class="project-card">
+            <a href="https://www.unifiedtechrepairs.com">
+            <img src="assets/images/unified_tech_logo.jpeg" alt="Unified Tech Repairs" class="image"></a>
+            <div class="text">
+                <h3>Unified Tech Repairs</h3>
+                <p>Unified Tech Repair is a professional service website that offers: Apple repair services, troubleshooting, and IT services<br>
+                    Created using HTML, CSS, and Javascript.</p>
+            </div>
+        </div>
+        <div class="project-card">
             <img src="assets/images/image-12.jpg" alt="Portfolio" class="image">
             <div class="text">
                 <h3>Portfolio</h3>
                 <p>My personal website. Created using HTML, CSS, and Javascript.</p>
+        </div>      
+    </div>
+        <div class="project-card">
+            <a href="https://oneironaught.github.io/black_lotus/">
+            <img src="assets/images/black_lotus_logo.jpg" alt="Black Lotus Tattoo Shop" class="image"></a>
+            <div class="text">
+                <h3>Black Lotus Tattoo Studio</h3>
+                <p>This is a professional platform designed to showcase the studio's work, artists, and services. It includes features like a responsive design, full-screen landing page, portfolio gallery, online booking, and secure deposit payment integration.<br>
+                    Created using HTML, CSS, and Javascript.</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <img src="assets/images/leon_landing.jpg" alt="Leon Logo" class="image">
+            <div class="text">
+                <h3>Leon & Leon Stud Earrings</h3>
+                <p>Leon & Leon Stud Earrings is a modern e-commerce website specializing in premium stud earrings. The site combines elegant design, responsiveness, and functionality to deliver an intuitive shopping experience.<br>
+                    Features: Elegant Full-Screen Landing Page with a transparent navbar.
+                    Dynamic Cart System to manage user purchases.
+                    Responsive Design optimized for all devices.
+                    Created using HTML, CSS, and Javascript.</p>
         </div>      
     </div>
     <div class="project-card">
