added social icons back to the footer

--- a/index.html
+++ b/index.html
@@ -359,8 +359,15 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer">
-        <p>© 2024 Robert Ruelas</p>
+    <footer>
+        <footer class="footer">
+        <div class="footer-social-icons">
+            <a href="https://github.com/oneironaught" target="_blank" class="fa fa-github"></a>
+            <a href="https://www.linkedin.com/in/rruelas87/" target="_blank" class="fa fa-linkedin"></a>
+            <a href="https://www.facebook.com/bobby.ruelas/" target="_blank" class="fa fa-facebook"></a>
+            <a href="https://www.instagram.com/andvenus/" target="_blank" class="fa fa-instagram"></a>
+        </div>
+        <p>&copy; 2025 Robert Ruelas. All Rights Reserved.</p>
     </footer>
         <!-- Back to Top Button -->
         <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Home</button>
