added to projects section

--- a/index.html
+++ b/index.html
@@ -229,11 +229,31 @@
     <div class="content-section" id="projects" data-aos="fade-up">
         <h2>Projects</h2>
         <div class="project-card">
+            <a href="https://github.com/oneironaught/coffee_passport.git">
+            <img src="assets/images/Coffee_Passport_Icon.png" alt="Coffee Passport App Icon" class="image"></a>
+            <div class="text">
+                <h3>Coffee Passport App</h3>
+                <p>This is a prototype application using SwiftUI that allows the client to log and track different styles of Starbucks Coffees.<br>Features: <br>
+                    User registration, login, coffee tracking, and filtering functionality.
+                    User authentication using Firebase Authentication.
+                    Real-time data synchronization using Firebase Realtime Database.
+                    Created using SwiftUI, Combine, and Firebase. 
+                  </p>
+        </div>      
+    </div>
+        <div class="project-card">
             <a href="https://www.andvenus.com">
             <img src="assets/images/and_venus.jpeg" alt="And Venus" class="image"></a>
             <div class="text">
                 <h3>And Venus</h3>
-                <p>My band's official website. Created using HTML, CSS, and Javascript.</p>
+                <p>My band's official website.<br>
+                    This is a professional platform designed to showcase our music, skills, and services. It includes features like a responsive design, full-screen landing page, e-commerce store, image gallery, and contact form.<br>
+                    Features: <br>
+                    Responsive Design optimized for all devices.
+                    Full-Screen Landing Page with a floating navbar.
+                    Dynamic Portfolio Gallery to showcase our work.
+                    Contact Form for inquiries and feedback.
+                    Created using HTML, CSS, and Javascript.</p> 
             </div>
         </div>
         <div class="project-card">
@@ -241,7 +261,12 @@
             <img src="assets/images/unified_tech_logo.jpeg" alt="Unified Tech Repairs" class="image"></a>
             <div class="text">
                 <h3>Unified Tech Repairs</h3>
-                <p>Unified Tech Repair is a professional service website that offers: Apple repair services, troubleshooting, and IT services<br>
+                <p>Unified Tech Repair is a professional service website that offers: Apple repair services, troubleshooting, and IT services. This is the official website for my business<br>
+                    Features:<br> 
+                    Responsive Design optimized for all devices.
+                    Full-Screen Landing Page with a floating navbar.
+                    Dynamic Portfolio Gallery to showcase my work.
+                    Online Booking System for scheduling appointments.
                     Created using HTML, CSS, and Javascript.</p>
             </div>
         </div>
@@ -249,7 +274,14 @@
             <img src="assets/images/image-12.jpg" alt="Portfolio" class="image">
             <div class="text">
                 <h3>Portfolio</h3>
-                <p>My personal website. Created using HTML, CSS, and Javascript.</p>
+                <p>My personal website.<br>
+                    This is a professional platform designed to showcase my work, skills, and services. It includes features like a responsive design, full-screen landing page, portfolio gallery, and contact form.<br>
+                    Features: <br>
+                    Responsive Design optimized for all devices.
+                    Full-Screen Landing Page with a floating navbar.
+                    Dynamic Portfolio Gallery to showcase my work.
+                    Contact Form for inquiries and feedback.
+                    Created using HTML, CSS, and Javascript.</p> 
         </div>      
     </div>
         <div class="project-card">
@@ -258,20 +290,55 @@
             <div class="text">
                 <h3>Black Lotus Tattoo Studio</h3>
                 <p>This is a professional platform designed to showcase the studio's work, artists, and services. It includes features like a responsive design, full-screen landing page, portfolio gallery, online booking, and secure deposit payment integration.<br>
+                    Features: <br>
+                    Responsive Design optimized for all devices.
+                    Full-Screen Landing Page with a floating navbar.
+                    Dynamic Portfolio Gallery to showcase the studio's work.
+                    Online Booking System for scheduling appointments.
+                    Secure Deposit Payment Integration for booking appointments.
+                    Contact Form for inquiries and feedback.
                     Created using HTML, CSS, and Javascript.</p>
             </div>
         </div>
         <div class="project-card">
-            <img src="assets/images/leon_landing.jpg" alt="Leon Logo" class="image">
+            <div class="container">
+                <a href="https://leonleonstudearrings.com"><img src="assets/images/image-36.jpg" alt="Leon Landing Logo" class="image"></a>
+              <div class="text">
+                <h3>Leon & Leon Stud Earrings Official Site</h3>
+                <p>Leon & Leon Stud Earrings is a modern e-commerce website specializing in premium stud earrings. The site combines elegant design, responsiveness, and functionality to deliver an intuitive shopping experience. This site was created using BigCommerce<br>
+                    Features:<br> 
+                    Dynamic Cart System to manage user purchases.
+                    Inventory tracker
+                    Responsive Design optimized for all devices.
+                    Created using HTML, CSS, and Javascript.</p>
+            </div>
+        </div>
+        </div>
+        <div class="project-card">
+            <a href="https://oneironaught.github.io/leonleon/">
+            <img src="assets/images/leon_landing.jpg" alt="Leon Logo" class="image"></a>
             <div class="text">
-                <h3>Leon & Leon Stud Earrings</h3>
-                <p>Leon & Leon Stud Earrings is a modern e-commerce website specializing in premium stud earrings. The site combines elegant design, responsiveness, and functionality to deliver an intuitive shopping experience.<br>
+                <h3>Leon & Leon Stud Earrings Mock Up</h3>
+                <p>Leon & Leon Stud Earrings is a mock up e-commerce website that specializes in premium stud earrings. The site combines elegant design, responsiveness, and functionality to deliver an intuitive shopping experience.<br>
                     Features: Elegant Full-Screen Landing Page with a transparent navbar.
                     Dynamic Cart System to manage user purchases.
                     Responsive Design optimized for all devices.
                     Created using HTML, CSS, and Javascript.</p>
         </div>      
     </div>
+    <div class="project-card">
+        <a href="https://oneironaught.github.io/krisp_gallery/">
+        <img src="assets/images/krisp_logo.jpg" alt="Krisp Gallery Logo" class="image"></a>
+        <div class="text">
+            <h3>Krisp Gallery Bar Mock Up</h3>
+            <p>Krisp Gallery website is a mockup site for a local bar in Weslaco TX. Features: <br> 
+                Elegant Full-Screen Landing Page with a transparent navbar.
+                Dynamic Portfolio Gallery to showcase the bar's work.
+                Contact Form for inquiries and feedback.
+                Created using HTML, CSS, and Javascript.<br>
+            </p>
+    </div>      
+</div>
     <div class="project-card">
         <a href="https://horiseon.on.fleek.co">
             <img src="assets/images/horiseon.png" alt="Horiseon" class="image"></a>
@@ -294,14 +361,6 @@
             <div class="text">
             <h3>Password Generator</h3>
             <p>This is a mini Password Generator that I created using HTML, CSS, and Javascript</p>
-        </div>
-    </div>
-    <div class="project-card">
-        <div class="container">
-            <a href="https://sant-andreu-jazz.on.fleek.co"><img src="assets/images/alba.jpg" alt="alba" class="image"></a>
-          <div class="text">
-            <h3>All that Jazz</h3>
-            <p>This is a skeleton for a fan website utilizing hyperlinks and a Buy Now button. I used HTML and CSS</p>
         </div>
     </div>
 </div>
