fixed image sizes. fixed html, css, and script to align the projects section

--- a/index.html
+++ b/index.html
@@ -222,25 +222,28 @@
         </a>    
     </div>
 
-    <!-- Projects section -->
-    <div class="content-section" id="projects" data-aos="fade-up">
-        <h2>Projects</h2>
+ <!-- Projects section -->
+<div class="content-section" id="projects" data-aos="fade-up">
+    <h2>Projects</h2>
+    <div class="projects-container">
         <div class="project-card">
             <a href="https://github.com/oneironaught/coffee_passport.git">
-            <img src="assets/images/Coffee_Passport_Icon.png" alt="Coffee Passport App Icon" class="image"></a>
+                <img src="assets/images/Coffee_Passport_Icon.png" alt="Coffee Passport App Icon" class="image">
+            </a>
             <div class="text">
                 <h3>Coffee Passport App</h3>
                 <p>This is a prototype application using SwiftUI that allows the client to log and track different styles of Starbucks Coffees.<br>Features: <br>
                     User registration, login, coffee tracking, and filtering functionality.
                     User authentication using Firebase Authentication.
                     Real-time data synchronization using Firebase Realtime Database.
-                    Created using SwiftUI, Combine, and Firebase. 
-                  </p>
-        </div>      
-    </div>
+                    Created using SwiftUI, Combine, and Firebase.
+                </p>
+            </div>
+        </div>
         <div class="project-card">
             <a href="https://www.andvenus.com">
-            <img src="assets/images/and_venus.jpeg" alt="And Venus" class="image"></a>
+                <img src="assets/images/and_venus.jpeg" alt="And Venus" class="image">
+            </a>
             <div class="text">
                 <h3>And Venus</h3>
                 <p>My band's official website.<br>
@@ -250,16 +253,17 @@
                     Full-Screen Landing Page with a floating navbar.
                     Dynamic Portfolio Gallery to showcase our work.
                     Contact Form for inquiries and feedback.
-                    Created using HTML, CSS, and Javascript.</p> 
+                    Created using HTML, CSS, and Javascript.</p>
             </div>
         </div>
         <div class="project-card">
             <a href="https://www.unifiedtechrepairs.com">
-            <img src="assets/images/unified_tech_logo.jpeg" alt="Unified Tech Repairs" class="image"></a>
+                <img src="assets/images/unified_tech_logo.jpeg" alt="Unified Tech Repairs" class="image">
+            </a>
             <div class="text">
                 <h3>Unified Tech Repairs</h3>
                 <p>Unified Tech Repair is a professional service website that offers: Apple repair services, troubleshooting, and IT services. This is the official website for my business<br>
-                    Features:<br> 
+                    Features:<br>
                     Responsive Design optimized for all devices.
                     Full-Screen Landing Page with a floating navbar.
                     Dynamic Portfolio Gallery to showcase my work.
@@ -278,12 +282,13 @@
                     Full-Screen Landing Page with a floating navbar.
                     Dynamic Portfolio Gallery to showcase my work.
                     Contact Form for inquiries and feedback.
-                    Created using HTML, CSS, and Javascript.</p> 
-        </div>      
-    </div>
+                    Created using HTML, CSS, and Javascript.</p>
+            </div>
+        </div>
         <div class="project-card">
             <a href="https://oneironaught.github.io/black_lotus/">
-            <img src="assets/images/black_lotus_logo.jpg" alt="Black Lotus Tattoo Shop" class="image"></a>
+                <img src="assets/images/black_lotus_logo.jpg" alt="Black Lotus Tattoo Shop" class="image">
+            </a>
             <div class="text">
                 <h3>Black Lotus Tattoo Studio</h3>
                 <p>This is a professional platform designed to showcase the studio's work, artists, and services. It includes features like a responsive design, full-screen landing page, portfolio gallery, online booking, and secure deposit payment integration.<br>
@@ -300,20 +305,21 @@
         <div class="project-card">
             <div class="container">
                 <a href="https://leonleonstudearrings.com"><img src="assets/images/image-36.jpg" alt="Leon Landing Logo" class="image"></a>
-              <div class="text">
+            </div>
+            <div class="text">
                 <h3>Leon & Leon Stud Earrings Official Site</h3>
                 <p>Leon & Leon Stud Earrings is a modern e-commerce website specializing in premium stud earrings. The site combines elegant design, responsiveness, and functionality to deliver an intuitive shopping experience. This site was created using BigCommerce<br>
-                    Features:<br> 
+                    Features:<br>
                     Dynamic Cart System to manage user purchases.
                     Inventory tracker
                     Responsive Design optimized for all devices.
                     Created using HTML, CSS, and Javascript.</p>
             </div>
         </div>
-        </div>
         <div class="project-card">
             <a href="https://oneironaught.github.io/leonleon/">
-            <img src="assets/images/leon_landing.jpg" alt="Leon Logo" class="image"></a>
+                <img src="assets/images/leon_landing.jpg" alt="Leon Logo" class="image">
+            </a>
             <div class="text">
                 <h3>Leon & Leon Stud Earrings Mock Up</h3>
                 <p>Leon & Leon Stud Earrings is a mock up e-commerce website that specializes in premium stud earrings. The site combines elegant design, responsiveness, and functionality to deliver an intuitive shopping experience.<br>
@@ -321,47 +327,51 @@
                     Dynamic Cart System to manage user purchases.
                     Responsive Design optimized for all devices.
                     Created using HTML, CSS, and Javascript.</p>
-        </div>      
+            </div>
+        </div>
+        <div class="project-card">
+            <a href="https://oneironaught.github.io/krisp_gallery/">
+                <img src="assets/images/krisp_logo.jpg" alt="Krisp Gallery Logo" class="image">
+            </a>
+            <div class="text">
+                <h3>Krisp Gallery Bar Mock Up</h3>
+                <p>Krisp Gallery website is a mockup site for a local bar in Weslaco TX. Features: <br>
+                    Elegant Full-Screen Landing Page with a transparent navbar.
+                    Dynamic Portfolio Gallery to showcase the bar's work.
+                    Contact Form for inquiries and feedback.
+                    Created using HTML, CSS, and Javascript.<br>
+                </p>
+            </div>
+        </div>
+        <div class="project-card">
+            <a href="https://horiseon.on.fleek.co">
+                <img src="assets/images/horiseon.png" alt="Horiseon" class="image">
+            </a>
+            <div class="text">
+                <h3>Business Website Mockup</h3>
+                <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <a href="https://oneironaught.github.io/run-buddy/">
+                <img src="assets/images/run_buddy.jpeg" alt="run_buddy" class="image">
+            </a>
+            <div class="text">
+                <h3>Run Buddy</h3>
+                <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
+            </div>
+        </div>
+        <div class="project-card">
+            <a href="https://oneironaught.github.io/password-generator/">
+                <img src="assets/images/password_generator.jpeg" alt="password_generator" class="image">
+            </a>
+            <div class="text">
+                <h3>Password Generator</h3>
+                <p>This is a mini Password Generator that I created using HTML, CSS, and Javascript</p>
+            </div>
+        </div>
     </div>
-    <div class="project-card">
-        <a href="https://oneironaught.github.io/krisp_gallery/">
-        <img src="assets/images/krisp_logo.jpg" alt="Krisp Gallery Logo" class="image"></a>
-        <div class="text">
-            <h3>Krisp Gallery Bar Mock Up</h3>
-            <p>Krisp Gallery website is a mockup site for a local bar in Weslaco TX. Features: <br> 
-                Elegant Full-Screen Landing Page with a transparent navbar.
-                Dynamic Portfolio Gallery to showcase the bar's work.
-                Contact Form for inquiries and feedback.
-                Created using HTML, CSS, and Javascript.<br>
-            </p>
-    </div>      
 </div>
-    <div class="project-card">
-        <a href="https://horiseon.on.fleek.co">
-            <img src="assets/images/horiseon.png" alt="Horiseon" class="image"></a>
-            <div class="text">
-            <h3>Business Website Mockup</h3>
-            <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
-        </div>
-    </div>
-    <div class="project-card">
-        <a href="https://oneironaught.github.io/run-buddy/">
-            <img src="assets/images/run_buddy.jpeg" alt="run_buddy" class="image"></a>
-            <div class="text">
-            <h3>Run Buddy</h3>
-            <p>This is a sample website that I created using HTML, CSS, and Javascript</p>
-        </div>
-    </div>
-    <div class="project-card">
-        <a href="https://oneironaught.github.io/password-generator/">
-            <img src="assets/images/password_generator.jpeg" alt="password_generator" class="image"></a>
-            <div class="text">
-            <h3>Password Generator</h3>
-            <p>This is a mini Password Generator that I created using HTML, CSS, and Javascript</p>
-        </div>
-    </div>
-</div>
-    </div>
 
 <!-- Photos section -->
 <div class="content-section" id="photos" data-aos="fade-up">
