updated contact email in html page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             As a Certified Mac Technician, I provide expert technical support across all Apple products<br>
             complemented by a diverse background spanning quantitative and qualitative data analysis, applied behavior analysis,<br> 
             technology, computer hardware repair, software development, management, interpersonal communication, and mentorship.<br> 
-            <a href="mailto:bobbyruelas@me.com" style="color: rgb(24, 68, 157);">Contact me</a> today to learn more about how I can help you achieve your goals.
+            <a href="mailto:bobbyruelas@gmail.com" style="color: rgb(24, 68, 157);">Contact me</a> today to learn more about how I can help you achieve your goals.
         </p>
     </div>
 
@@ -418,7 +418,7 @@
             <h2>Contact</h2>
             <h3>Thank you for visiting! I'd love to hear from you! 
                 <br>If you have any questions, feedback, or would like to get in touch with me, 
-                <br>please use the form below or reach out <a href="mailto:bobbyruelas@me.com" style="color: gray;">via Email</a>.
+                <br>please use the form below or reach out <a href="mailto:bobbyruelas@gmail.com" style="color: gray;">via Email</a>.
             </h3>
             <div class="calendly-inline-widget" data-url="https://calendly.com/bobbyruelas" style="min-width:320px;height:630px;"></div>
         </div>
